; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_handle_wf_trap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_handle_wf_trap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXC_BAD_INSTRUCTION = common dso_local global i32 0, align 4
@EXC_ARM_UNDEFINED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @handle_wf_trap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_wf_trap(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [2 x i32], align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 2, i32* %5, align 4
  %6 = load i32, i32* @EXC_BAD_INSTRUCTION, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @EXC_ARM_UNDEFINED, align 4
  %8 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  store i32 %7, i32* %8, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @get_saved_state_sp(i32* %9)
  %11 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 1
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %3, align 4
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @exception_triage(i32 %12, i32* %13, i32 %14)
  %16 = call i32 @assert(i32 0)
  ret void
}

declare dso_local i32 @get_saved_state_sp(i32*) #1

declare dso_local i32 @exception_triage(i32, i32*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
